@@ -6,6 +6,8 @@ Differences in 1.9.7
 - list of talks (talks.txt) moved to ${HOME}/.freeseer/
 - videos now save in ${HOME}/Videos/
 - some prep work for rpm and deb packages
+- better instructions for using vga2usb
+- added a tool for transcoding to make the videos a managable size for upload
 
 Differences in 1.9.6
 - initial version of release_notes.txt
